--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -4,15 +4,12 @@
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
-            <div class="col">
-
-            </div>
+            <div class="col"></div>
         </div>
     </div>
 {% endblock %}
 
 {% block content %}
-
     <div class="overlay"></div>
     <div class="container mb-2">
         <div class="row">
@@ -22,6 +19,7 @@
                 <hr>
             </div>
         </div>
+
         <div class="row">
             <div class="col">
                 {% if bag_items %}
@@ -29,11 +27,11 @@
                         <table class="table table-sm table-borderless">
                             <thead class="text-black">
                                 <tr>
-                                    <th class="col">Product Info</th>
-                                    <th class="col"></th>
-                                    <th class="col">Price</th>
-                                    <th class="col">Qty</th>
-                                    <th class="col">Subtotal</th>
+                                    <th scope="col">Product Info</th>
+                                    <th scope="col"></th>
+                                    <th scope="col">Price</th>
+                                    <th scope="col">Qty</th>
+                                    <th scope="col">Subtotal</th>
                                 </tr>
                             </thead>
 
@@ -43,19 +41,18 @@
                                         <img class="img-fluid rounded" src="{{ item.product.image.url }}">
                                     </td>
                                     <td class="py-3">
-                                        <p class="my-0">
-                                            <strong>{{ item.product.name }}</strong>
-                                        </p>
+                                        <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                                        <p class="my-0"><strong>Size: </strong>{% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</p>
                                         <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
                                     </td>
                                     <td class="py-3">
-                                        <p class="my-0">{{ item.product.price }}</p>
+                                        <p class="my-0">${{ item.product.price }}</p>
                                     </td>
                                     <td class="py-3 w-25">
                                         <p class="my-0">{{ item.quantity }}</p>
                                     </td>
                                     <td class="py-3">
-                                        <p class="my-0">{{ item.product.price }}</p>
+                                        <p class="my-0">${{ item.product.price }}</p>
                                     </td>
                                 </tr>
                             {% endfor %}
@@ -86,11 +83,11 @@
                                         </span>
                                     </a>
                                 </td>
-                            </tr>    
+                            </tr>
                         </table>
                     </div>
                 {% else %}
-                    <p class="lead mb-5">Your bag is empty</p>
+                    <p class="lead mb-5">Your bag is empty.</p>
                     <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
@@ -101,5 +98,4 @@
             </div>
         </div>
     </div>
-
 {% endblock %}
