--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -135,3 +135,15 @@
         </div>
     </div>
 {% endblock %}
+
+{% block postload_js %}
+    {{ block.super }}
+    
+    <!-- Since we can't render dango template variables in external files -->
+    <!-- We need to use json_script to render them here, then we can access -->
+    <!-- Them within the external file -->
+    {{ stripe_public_key|json_script:"id_stripe_public_key"}}
+    {{ stripe_public_key|json_script:"id_client_secret"}}
+
+    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
+{% endblock %}
